# syslog-ng-3.5

./: README.md
lib/logproto/: Makefile.am  logproto-http-server.c  logproto-http-server.h
lib/logproto/tests/: Makefile.am  test-http-server.c  test_logproto.c
lib/rewrite/: rewrite-expr-grammar.ym  rewrite-expr.c  rewrite-expr.h
modules/affile/: Makefile.am  filemonitor.c  filemonitor.h
modules/affile/tests/: Makefile.am  test_filemonitor.c
modules/avro/: logmessage.avsc
tests/: collect-cov.sh
tests/loggen/: loggen.c
